calibration_experimental_study_DEBUG_20260209_154926/experiment_C02_Standard/experiment_console.log
=== EXPERIMENT C02: Standard (DEBUG) ===
Python: Python 3.10.12
PyTorch: 2.4.0a0+f70bd71a48.nv24.06
CUDA available: True
  File "<string>", line 1
    import torch; print(torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"None\")
                                                                                         ^
SyntaxError: unexpected character after line continuation character
GPU: 
Dataset: ./dataset_20260201_beads calibration_S16-Basler camera
Output: ./calibration_experimental_study_DEBUG_20260209_154926/experiment_C02_Standard
🐛 DEBUG MODE: Enhanced preprocessing + Enhanced model enabled
===============================
Starting Standard experiment...
================================================================================
🐛 DEBUG MODE - CALIBRATION EXPERIMENTAL STUDY
================================================================================
✅ Enhanced Preprocessing: True (keeps 512x512)
✅ Enhanced Model: True
✅ Mixed Precision: True
✅ Dataset: ./dataset_20260201_beads calibration_S16-Basler camera
✅ Dilution Factors: ['50x', '100x', '200x', '400x', '800x', '1600x', '3200x', '6400x', '12800x', '25600x', '51200x']
================================================================================
🐛 DEBUG VERSION - See fixes in code comments marked with ✅
Key changes:
  1. Default enhanced_preprocessing=True (keeps 512x512)
  2. Default use_enhanced_model=True
  3. Fixed dilution factor pattern matching
  4. Added prediction range diagnostics
  5. Early termination if R²<0 after 10 epochs

================================================================================

Standard experiment completed on Mon Feb  9 15:50:43 +08 2026
=== GPU MEMORY USAGE AFTER Standard ===
0, 46068, 0
=======================================
